  also work (but see README.md for some limitiations of using pip)

  Particular thanks to @xoviat, who helped with prompting me to make the
  change, imported all the issues from sourceforge, and helped with the
  process for creating the wheels.

  As a part of this, I've changed every issue in this file from "#xxx" to
  "#sfxxx" to indicate they refer to the old sourceforge issue numbers.

* win32file - fix ERROR_BAD_LENGTH in GetFileInformationByHandleEx
  in x86 builds(issue #752, rbschk)

* MakeModuleForTypelib no longer catches COM exceptions, so no longer can
  return None. This is what the docstring always claimed the behaviour was
  and makes things less error prone. If you explicitly call this function and
  handle None, you will need to wrap the call in an exception handler.

* Change PyIMAPIFolder CopyMessages, DeleteMessages, and EmptyFolder to return
  the HRESULT (Nick Czeczulin via patch #sf162)

* Fix a reference leak of Py_None in a couple of MAPI methods (Nick Czeczulin
  via patch #sf149)

Since build 220:
----------------
* Add PyIMapiSession::AdminServices method (Nick Czeczulin via patch #sf161)

* Allow win32com.client.CastTo() to have a typelib specified, which will be
  used to locate the object definition (Pieter Aarnoutse via patch #sf136)

* Add pythoncom.StgOpenStorageOnILockBytes (Nick Czeczulin via patch #sf135)

* IDispatch failures will try and get error information via IErrorInfo (Stefan
  Schukat via patch #sf130)

* A null SPropTagArray will now return None instead of crashing.

* New mapi/exchange interfaces PyIExchangeManageStoreEx, PyIMAPIAdviseSink,
 PyIMsgStore::Advise, PyIMsgStore::Unadvise, HrAllocAdviseSink,
 HrThisThreadAdviseSink, and HrDispatchNotifications (Nick Czeczulin)

Since build 219:
----------------
* win32com - sys.argv[0] may be set to a bytes object instead of a string on
  Python 3 when implementing an in-process COM object.

* Fix that allows a property to be fetched on COM objects to work in more cases