@@ -18,6 +18,10 @@ Since build 221:
   As a part of this, I've changed every issue in this file from "#xxx" to
   "#sfxxx" to indicate they refer to the old sourceforge issue numbers.
 
+* For Python 3.x, a win32 FILETIME or TimeStamp which is greater than the
+  datetime module can handle will return datetime.datetime.max instead of
+  throwing (fixes issue #748)
+
 * win32file - fix ERROR_BAD_LENGTH in GetFileInformationByHandleEx
   in x86 builds(issue #752, rbschk)
 
